--- a/index.html
+++ b/index.html
@@ -16,98 +16,105 @@
 </head>
 
 <body>
-	<header class="header-block">
+	<header class="background ">
 		<div class="container header">
-			<a class="logo--link" href="index.html">
-				<img src="img/nerds-logo.svg" alt="Логотип магазина Нёрдс">
+			<a class="logo" href="index.html">
+				<img class="logo--img" src="img/nerds-logo.svg" alt="Логотип магазина Нёрдс">
 			</a>
 			<nav class="nav">
-				<a class="header--link nav--open--link" href="index.html">Студия</a>
-				<a class="header--link" href="#">Клиенты</a>
-				<a class="header--link" href="catalog.html">Магазин</a>
-				<a class="header--link" href="#">Контакты</a>
+				<a class="nav--link nav--link-open" href="index.html">Студия</a>
+				<a class="nav--link" href="#">Клиенты</a>
+				<a class="nav--link" href="catalog.html">Магазин</a>
+				<a class="nav--link" href="#">Контакты</a>
 			</nav>
 			<div class="basket">
-				<img src="img/icons/cart-icon.svg" alt="Корзина">
-				<a class="header--link" href="#">Корзина</a>
-			</div>	
-		</div>	
+				<a class="basket--link" href="#">Корзина</a>
+			</div>
+		</div>
 	</header>
 
 	<main class="main">
 		<div class="background">
 			<section class="container">
-				<div class="slider--all">
-					<div class="sliders">
-						<div class="slide--one">
-							<div class="slider--text">
-								<h2 class="slider--text--title">Долго, дорого, скрупулезно</h2>
-								<p class="paragraph">Математически выверенный дизайн <br>
-								 для вашего сайта или мобильного приложения.</p>								
+				<div class="slide-all">
+					<div>
+						<div class="slide-one">
+							<div class="slide-text">
+								<h2 class="slide-text--title">Долго, дорого, скрупулезно</h2>
+								<p class="slide-text--suptitle paragraph">Математически выверенный дизайн <br>
+								 для вашего сайта или мобильного приложения.</p>
 							</div>
-							<div class="slider--img">
+							<div class="slide-img">
 								<img src="img/sliders/slide-picture-three.png" alt="">
 							</div>
 						</div>
-						<div class="slide--two none">
-							<div class="slider--text">
-								<h2 class="slider--text--title">Любим математику как никто другой</h2>
-								<p class="paragraph">Никакого креатива, только математические формулы <br>
-								для расчета идеальных пропорций.</p>								
+						<div class="slide-two none">
+							<div class="slide-text">
+								<h2 class="slide-text--title">Любим математику как никто другой</h2>
+								<p class="slide-text--suptitle paragraph">Никакого креатива, только математические формулы <br>
+								для расчета идеальных пропорций.</p>
 							</div>
-							<div class="slider--img">
+							<div class="slide-img">
 								<img src="img/sliders/slide-picture.png" alt="">
 							</div>
 						</div>
-						<div class="slide--three none">
-							<div class="slider--text">
-								<h2 class="slider--text--title">Только ночь, только хардкор</h2>
-								<p class="paragraph">Работать днем, как все? Мы против этого. <br>
-								Ближе к полуночи работа только начинается.</p>								
+						<div class="slide-three none">
+							<div class="slide-text">
+								<h2 class="slide-text--title">Только ночь, только хардкор</h2>
+								<p class="slide-text--suptitle paragraph">Работать днем, как все? Мы против этого. <br>
+								Ближе к полуночи работа только начинается.</p>
 							</div>
-							<div class="slider--img">
+							<div class="slide-img">
 								<img src="img/sliders/two.png" alt="">
 							</div>
 						</div>
-						<button class="button slider--button">Узнать больше</button>
-						<form class="next--slide">
-							<input class="" name="slide" type="radio"> 
-							<input class=""  name="slide" type="radio">
-							<input class=""  name="slide" type="radio"> 
-						</form>
+						<a class="button slide--all-button">Узнать больше</a>
+						<div class="next-slide">
+							<div>
+								<button class="slide-one-button button slide-active"></button>
+							</div>
+							<div>
+								<button class="slide-two-button button"></button>
+							</div>
+							<div>
+								<button class="slide-three-button button"></button>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
 		</div>
-		<section class="container">
+		<section class="container border-bottom">
 			<ul class="advantages">
-				<li class="list advantages--card">
-					<img src="img/advantages/1.jpg" alt="Мы создаем веб-Сайты">
-					<h3 class="advantages--title">Веб-Сайты</h3>
-					<p class="paragraph advantages--suptitle">Мир никогда не будетпрежним
-					   после того как увидит ваш сайт!</p>
-					 <button class="button button--red">Заказать</button>
+				<li class="list advantages--site">
+					<div class="list advantages--site--content">
+						<h3 class="advantages--title">Веб-Сайты</h3>
+						<p class="paragraph advantages--suptitle">Мир никогда не будетпрежним
+							после того как увидит ваш сайт!</p>
+						<a class="button button--red button--advantages">Заказать</a>
+					</div>
 				</li>
-				<li class="list advantages--card">
-					<img src="img/advantages/2.jpg" alt="Мы создаем Приложения">
-					<h3 class="advantages--title">Приложения</h3>
-					<p class="paragraph advantages--suptitle">Покорите топ-10 приложений в AppStore и Google Play</p>
-					<button class="button button--green">Заказать</button>
+				<li class="list advantages--application">
+					<div class="list advantages--application--content">
+						<h3 class="advantages--title">Приложения</h3>
+						<p class="paragraph advantages--suptitle">Покорите топ-10 приложений в AppStore и Google Play</p>
+						<a class="button button--green button--advantages">Заказать</a>
+					</div>
 				</li>
-				<li class="list advantages--card">
-					<img src="img/advantages/3.jpg" alt="Мы создаем презентации">
-					<h3 class="advantages--title">Презентации</h3>
-					<p class="paragraph advantages--suptitle">Вы даже не подозреваете,
-					   насколько вы изумительны!</p>
-					<button class="button button--yellow">Заказать</button>
+				<li class="list advantages--presentation">
+					<div class="list advantages--presentation--content">
+						<h3 class="advantages--title">Презентации</h3>
+						<p class="paragraph advantages--suptitle">Вы даже не подозреваете,
+							насколько вы изумительны!</p>
+						<a class="button button--yellow button--advantages">Заказать</a>
+					</div>
 				</li>
 			</ul>
-		</section>	
+		</section>
 		<section class="container">
-			<hr class="hr-partners">
-			<div class="about">				
+			<div class="about">
 				<div class="about--information">
-					<h2 class="about--information-title">Мы — маленькая, но гордая дизайн-студия из Краснодара. </h2>
+					<h2 class="about--information--title">Мы — маленькая, но гордая дизайн-студия из Краснодара. </h2>
 					<p class="paragraph about--information--suptitle">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
 					<h4 class="about--wedo--title">Выполняем заказы на разработку:</h4>
 					<ul>
@@ -119,7 +126,7 @@
 				<div class="about--statistics">
 					<div class="about--statistics--img">
 						<img src="img/about/about.png" alt="">
-						<p class="about--statistics--title">с 2004 года любим точность во всем:</p>
+						<p class="about--statistics--suptitle">с 2004 года любим точность во всем:</p>
 					</div>
 					<div class="statistics--percent">
 						<div class="statistics--percent--numbers">
@@ -133,88 +140,67 @@
 						<div class="statistics--percent--numbers">
 							<b>50<sup>%</sup></b>
 							<p class="">Минимальная предоплата</p>
-						</div>							
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<div class="container">	
-			<hr class="hr-partners">
-			<div class="partners">			
-				<div class="partners--link">
+		<div class="container border-top border-bottom">
+			<ul class="partners">
+				<li class="partners--link partners--link-border">
 					<a href="#">
 						<img src="img/partners/htmlacdemy.png" alt="">
 					</a>
-				</div>
-				<hr class="hr-double">
-				<div class="partners--link">
+				</li>
+				<li class="partners--link partners--link-border">
 					<a href="#">
 						<img src="img/partners/borodinsli.png" alt="">
 					</a>
-				</div>
-				<hr class="hr-double">
-				<div class="partners--link">
+				</li>
+				<li class="partners--link partners--link-border">
 					<a href="#">
 						<img src="img/partners/pink.png" alt="">
 					</a>
-				</div>
-				<hr class="hr-double">
-				<div class="partners--link">
+				</li>
+				<li class="partners--link">
 					<a href="#">
 						<img src="img/partners/mishka.png" alt="">
 					</a>
-				</div>
-			</div>
-			<hr class="hr-partners">
+				</li>
+			</ul>
 		</div>
 	</main>
 
 	<footer class="footer">
 		<div class="footer--feedback">
-			<div class="container where">			
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533198!2d30.32085871576473!3d59.93871648187627!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1582900834242!5m2!1sru!2sru" style="border:0;" allowfullscreen=""></iframe>
+			<div class="container">
 				<div class="feedback--adress">
 					<h3 class="feedback--adress--title">NЁRDS DESIGN STUDIO</h3>
 					<p class="paragraph feedback--adress--suptitle">
 						191186, Санкт-Петербург, 
 						ул. Б. Конюшенная, д. 19/8
 						<br><br>
-						тел. +7 (812) 275-75-75</p>
-					<button class="button link button--red">Напишите нам</button>
+						<a href="tel:+7(812)275-75-75"> тел. +7 (812) 275-75-75</a></p>
+					<a class="button link button--red feedback--button">Напишите нам</a>
 				</div>
-				<form class="feedback--form none" action="https://echo.htmlacademy.ru" >
-				    <h2 class="feedback--title">Напишите нам</h2>
-				    <button class="close feedback--close--button" type="button" class="cancel"></button>
-				    <div class="feedback--form--name">
-					    <label for="name"><b>Ваше имя:</b></label>
-					    <input id="name" type="text" placeholder="Имя Фамилия" name="name" required>
-					</div>
-				    <div class="feedback--form--email">
-					    <label for="email"><b>Ваш e-mail:</b></label>
-					    <input id="email" type="text" placeholder="email@example.com" name="e-mail" required>
-					</div>
-				    <div class="feedback--form--text">
-					    <label class="feedback--form--text--title" for="text_mail"><b>Текст вашего письма:</b></label>
-					    <textarea id="text_mail" name="comment" placeholder="В свободной форме" cols="40" rows="10"></textarea>
-					</div>
-				    <button type="submit" class="button send button--red">Отправить</button>
-				</form>
 			</div>
 		</div>
 		<div class="container">
 			<div class="footer--social">
 				<ul class="social--icons">
 					<li class="list">
-						<a href="#">
+						<a class="social--icons-anchor" href="#">
 							<svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15"><path fill="#FFF" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"/></svg>
 						</a>
-					</li>			
+					</li>
 					<li class="list">
-						<a href="#">
+						<a class="social--icons-anchor" href="#">
 							<svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/></svg>
 						</a>
-					</li>			
+					</li>
 					<li class="list">
-						<a href="#">
+						<a class="social--icons-anchor" href="#">
 							<svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
 						</a>
 					</li>
@@ -222,12 +208,28 @@
 				<div class="footer--text">
 					<h3 class="footer--title">Давайте дружить, это выгодно!</h3>
 					<p class="paragraph footer--suptitle">Скидка 10% для друзей из социальных сетей.</p>
-				</div>	
-			</div>				
-		</div>	
+				</div>
+			</div>
+		</div>
 	</footer>
-
+	<form class="feedback--form none" action="https://echo.htmlacademy.ru" method="post">
+		<h2 class="feedback--title">Напишите нам</h2>
+		<button class="close feedback--close--button" type="button"></button>
+		<div class="feedback--form--name">
+			<label for="name"><b>Ваше имя:</b></label>
+			<input id="name" type="text" placeholder="Имя Фамилия" name="name" required>
+		</div>
+		<div class="feedback--form--email">
+			<label for="email"><b>Ваш e-mail:</b></label>
+			<input id="email" type="text" placeholder="email@example.com" name="e-mail" required>
+		</div>
+		<div class="feedback--form--text">
+			<label for="text_mail"><b>Текст вашего письма:</b></label>
+			<textarea id="text_mail" name="comment" placeholder="В свободной форме" cols="40" rows="10"></textarea>
+		</div>
+		<button type="submit" class="button send button--red">Отправить</button>
+	</form>
 	<!-- ссылка на подключение js файла -->
-		<script src="jscript.js"></script>
+		<script src="script.js"></script>
 </body>
 </html>
